refactor: TopicCandidateRepositoryImpl에서 .toList() 사용으로 스트림 API 스타일 통일